--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -25,8 +26,12 @@
 
         <TreeView Height="auto" Name="DirectoryTree" Grid.Row="1" Grid.Column="0"></TreeView>
         <ScrollViewer Grid.Row="1" Grid.Column="1">
-            <TextBox Name="FileTextBox" ></TextBox>
+            <TextBox Name="FileTextBox" >
+            </TextBox>
         </ScrollViewer>
+        <StatusBar Grid.Row="3" Grid.ColumnSpan="2">
+            <TextBlock Name="PropertiesTextBlock" ></TextBlock>
+        </StatusBar>
         
     </Grid>
 </Window>
